Fixing details (cards hover and campaign spacing)

--- a/templates/g5_helium/custom/scss/tchooz.scss
+++ b/templates/g5_helium/custom/scss/tchooz.scss
@@ -1211,6 +1211,7 @@ input:focus + .em-slider {
 }
 .em-mb-44{
   margin-bottom: 44px;
+  margin-top: 44px;
 }
 .em-mb-64{
   margin-bottom: 64px;
